force-app/main/default/objects/Quote/fields/Horas_por_d_a1__c.field-meta.xml
<CustomField>
    <fullName>Horas_por_d_a1__c</fullName>
    <label>Horas por día1</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>