force-app/main/default/objects/Quote/fields/IBAN__c.field-meta.xml
<CustomField>
    <fullName>IBAN__c</fullName>
    <inlineHelpText>Los dos primeros caracteres identifican al país.En el caso de España sería: ES.Los dos caracteres siguientes corresponden a los dígitos de control.Los veinte caracteres restantes corresponden al Código de Cuenta Cliente que se viene utilizando.</inlineHelpText>
    <label>IBAN</label>
    <length>24</length>
    <type>Text</type>
</CustomField>