force-app/main/default/objects/Quote/fields/IdNewSales__c.field-meta.xml
<CustomField>
    <fullName>IdNewSales__c</fullName>
    <description>Id empleado en la aplicación móvil New Sales. Empleado para relacionar los presupuestos con los servicios, energías actuales, equipos actuales, tramos, depositos...</description>
    <externalId>true</externalId>
    <label>IdNewSales</label>
    <length>20</length>
    <type>Text</type>
</CustomField>