force-app/main/default/objects/Quote/fields/Importe_12_cuotas__c.field-meta.xml
<CustomField>
    <fullName>Importe_12_cuotas__c</fullName>
    <label>Importe 12 cuotas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>