force-app/main/default/objects/Quote/fields/Importe_12_cuotas_numeric__c.field-meta.xml
<CustomField>
    <fullName>Importe_12_cuotas_numeric__c</fullName>
    <description>Campo formula utilzado para mostrar los campos currencies con el formateo de Salesforce [#.##0,00] y sin mostrar la moneda [€]</description>
    <formula>Importe_12_cuotas__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importe 12 cuotas numeric</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>