force-app/main/default/objects/Quote/fields/Importe_ahorro_gas__c.field-meta.xml
<CustomField>
    <fullName>Importe_ahorro_gas__c</fullName>
    <label>Importe ahorro gas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>