force-app/main/default/objects/Quote/fields/Importe_alquiler_contador__c.field-meta.xml
<CustomField>
    <fullName>Importe_alquiler_contador__c</fullName>
    <label>Importe alquiler contador</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>