force-app/main/default/objects/Quote/fields/Importe_certificado__c.field-meta.xml
<CustomField>
    <fullName>Importe_certificado__c</fullName>
    <label>Importe certificado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>