force-app/main/default/objects/Quote/fields/Importe_contado_nuevo__c.field-meta.xml
<CustomField>
    <fullName>Importe_contado_nuevo__c</fullName>
    <label>Importe contado nuevo</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>