force-app/main/default/objects/Quote/fields/Importe_dep_sito_recliclado__c.field-meta.xml
<CustomField>
    <fullName>Importe_dep_sito_recliclado__c</fullName>
    <inlineHelpText>Rellenar este campo solo si se trata de un depósito calculado</inlineHelpText>
    <label>Importe depósito recliclado</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>