force-app/main/default/objects/Quote/fields/Importe_derechos_acometida__c.field-meta.xml
<CustomField>
    <fullName>Importe_derechos_acometida__c</fullName>
    <label>Importe derechos acometida</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>