force-app/main/default/objects/Quote/fields/Importe_descuento__c.field-meta.xml
<CustomField>
    <fullName>Importe_descuento__c</fullName>
    <inlineHelpText>Descuento por tonelada</inlineHelpText>
    <label>Importe descuento</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>