force-app/main/default/objects/Quote/fields/Importe_en_gas_en_E_L__c.field-meta.xml
<CustomField>
    <fullName>Importe_en_gas_en_E_L__c</fullName>
    <label>Importe en gas en €/L</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>