force-app/main/default/objects/Quote/fields/Importe_inspeccion_quincenal__c.field-meta.xml
<CustomField>
    <fullName>Importe_inspeccion_quincenal__c</fullName>
    <label>Importe inspección quincenal</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>