force-app/main/default/objects/Quote/fields/Importe_instalacion_estandar__c.field-meta.xml
<CustomField>
    <fullName>Importe_instalacion_estandar__c</fullName>
    <label>Importe instalación estándar</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>