force-app/main/default/objects/Quote/fields/Importe_modalidad_instalaci_n__c.field-meta.xml
<CustomField>
    <fullName>Importe_modalidad_instalaci_n__c</fullName>
    <label>Importe modalidad instalación</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>