force-app/main/default/objects/Quote/fields/Importe_otros__c.field-meta.xml
<CustomField>
    <fullName>Importe_otros__c</fullName>
    <label>Importe otros</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>