force-app/main/default/objects/Quote/fields/Importe_reenganche__c.field-meta.xml
<CustomField>
    <fullName>Importe_reenganche__c</fullName>
    <label>Importe reenganche</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>