force-app/main/default/objects/Quote/fields/Importe_SAU__c.field-meta.xml
<CustomField>
    <fullName>Importe_SAU__c</fullName>
    <label>Importe SAU</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>