force-app/main/default/objects/Quote/fields/Importe_t_rmino_fijo__c.field-meta.xml
<CustomField>
    <fullName>Importe_t_rmino_fijo__c</fullName>
    <label>Importe término fijo</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>