force-app/main/default/objects/Quote/fields/Importe_tarifa__c.field-meta.xml
<CustomField>
    <fullName>Importe_tarifa__c</fullName>
    <formula>IF(RecordType.DeveloperName==&apos;Oferta_estandar&apos;, Precio_Kg__c, 
IF(RecordType.DeveloperName==&apos;Oferta_personalizada&apos;, Precio_producto_gas__c, 
IF(RecordType.DeveloperName==&apos;Oferta_modular&apos;, 
IF(ISPICKVAL(Opcion_seleccionada_producto__c, &apos;Mensual&apos;), IF(ISPICKVAL(Financiacion_seleccionada__c, &apos;FinanciaGas&apos;), Precio_mensual_Kg__c + Importe_en_gas_en_E_Kg__c, Precio_mensual_Kg__c), 
IF(ISPICKVAL(Opcion_seleccionada_producto__c, &apos;Fijo&apos;), IF(ISPICKVAL(Financiacion_seleccionada__c, &apos;FinanciaGas&apos;), Precio_fijo_anual_Kg__c + Importe_en_gas_en_E_Kg__c, Precio_fijo_anual_Kg__c), 
IF(ISPICKVAL(Opcion_seleccionada_producto__c, &apos;Contador&apos;), IF(ISPICKVAL(Financiacion_seleccionada__c, &apos;FinanciaGas&apos;), Contador_Kg__c + Importe_en_gas_en_E_Kg__c, Contador_Kg__c), 
IF(ISPICKVAL(Opcion_seleccionada_producto__c, &apos;Plana&apos;), IF(ISPICKVAL(Financiacion_seleccionada__c, &apos;FinanciaGas&apos;), Tarifa_plana_Kg__c + Importe_en_gas_en_E_Kg__c, Tarifa_plana_Kg__c),null)))) 
,null) 
) 
)</formula>
    <label>Importe tarifa</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>