force-app/main/default/objects/Quote/fields/Importe_total_numeric__c.field-meta.xml
<CustomField>
    <fullName>Importe_total_numeric__c</fullName>
    <description>Campo formula utilzado para mostrar los campos currencies con el formateo de Salesforce [#.##0,00] y sin mostrar la moneda [€]</description>
    <formula>ROUND(Importe_total__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importe total numeric</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>