force-app/main/default/objects/Quote/fields/Importe_total_primagas__c.field-meta.xml
<CustomField>
    <fullName>Importe_total_primagas__c</fullName>
    <label>Importe total Primagas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>