force-app/main/default/objects/Quote/fields/Importe_vaporizador__c.field-meta.xml
<CustomField>
    <fullName>Importe_vaporizador__c</fullName>
    <label>Importe vaporizador</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>