force-app/main/default/objects/Quote/fields/Impuestos_especiales__c.field-meta.xml
<CustomField>
    <fullName>Impuestos_especiales__c</fullName>
    <label>Impuestos especiales</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>