force-app/main/default/objects/Quote/fields/Inspeccion_interior_primaservicios__c.field-meta.xml
<CustomField>
    <fullName>Inspeccion_interior_primaservicios__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inspección interior</label>
    <type>Checkbox</type>
</CustomField>