force-app/main/default/objects/Quote/fields/Instalaci_n_est_ndar__c.field-meta.xml
<CustomField>
    <fullName>Instalaci_n_est_ndar__c</fullName>
    <label>Instalación estándar</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>