force-app/main/default/objects/Quote/fields/Instalacion_interior__c.field-meta.xml
<CustomField>
    <fullName>Instalacion_interior__c</fullName>
    <label>Instalación interior</label>
    <length>255</length>
    <type>Text</type>
</CustomField>