force-app/main/default/objects/Quote/fields/Interior__c.field-meta.xml
<CustomField>
    <fullName>Interior__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interior</label>
    <type>Checkbox</type>
</CustomField>