force-app/main/default/objects/Quote/fields/Interior_estandar__c.field-meta.xml
<CustomField>
    <fullName>Interior_estandar__c</fullName>
    <label>Interior estándar</label>
    <length>255</length>
    <type>Text</type>
</CustomField>