force-app/main/default/objects/Quote/fields/Inversion_no_recuperable__c.field-meta.xml
<CustomField>
    <fullName>Inversion_no_recuperable__c</fullName>
    <formula>Total_inversion__c -  Coste_instalacion_exterior__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inversión no recuperable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>