force-app/main/default/objects/Quote/fields/invoice_ammount__c.field-meta.xml
<CustomField>
    <fullName>invoice_ammount__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>invoice ammount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>