force-app/main/default/objects/Quote/fields/Kg__c.field-meta.xml
<CustomField>
    <fullName>Kg__c</fullName>
    <label>Kg</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>