force-app/main/default/objects/Quote/fields/KgCO2__c.field-meta.xml
<CustomField>
    <fullName>KgCO2__c</fullName>
    <label>KgCO2</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>