force-app/main/default/objects/Quote/fields/KgCO2_Primagas__c.field-meta.xml
<CustomField>
    <fullName>KgCO2_Primagas__c</fullName>
    <label>KgCO2 Primagas</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>