force-app/main/default/objects/Quote/fields/KW1__c.field-meta.xml
<CustomField>
    <fullName>KW1__c</fullName>
    <label>KW1</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>