force-app/main/default/objects/Quote/fields/KW2__c.field-meta.xml
<CustomField>
    <fullName>KW2__c</fullName>
    <label>KW2</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>