force-app/main/default/objects/Quote/fields/KW3__c.field-meta.xml
<CustomField>
    <fullName>KW3__c</fullName>
    <label>KW3</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>