force-app/main/default/objects/Quote/fields/KWh__c.field-meta.xml
<CustomField>
    <fullName>KWh__c</fullName>
    <label>KWh</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>