force-app/main/default/objects/Quote/fields/KWh_Primagas__c.field-meta.xml
<CustomField>
    <fullName>KWh_Primagas__c</fullName>
    <label>KWh Primagas</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>