force-app/main/default/objects/Quote/fields/Legalizacion__c.field-meta.xml
<CustomField>
    <fullName>Legalizacion__c</fullName>
    <defaultValue>100</defaultValue>
    <label>Legalización</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>