force-app/main/default/objects/Quote/fields/LI_extintores__c.field-meta.xml
<CustomField>
    <fullName>LI_extintores__c</fullName>
    <label>LI extintores</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>