force-app/main/default/objects/Quote/fields/LI_legalizaci_n_Inst_Ext__c.field-meta.xml
<CustomField>
    <fullName>LI_legalizaci_n_Inst_Ext__c</fullName>
    <label>LI legalización Inst. Ext.</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>