force-app/main/default/objects/Quote/fields/Litros__c.field-meta.xml
<CustomField>
    <fullName>Litros__c</fullName>
    <label>Litros</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>