force-app/main/default/objects/Quote/fields/Litros_gasoil_por_a_o__c.field-meta.xml
<CustomField>
    <fullName>Litros_gasoil_por_a_o__c</fullName>
    <description>Litros de gasoil por año</description>
    <inlineHelpText>Solo si su energía actual es gasoil</inlineHelpText>
    <label>Litros gasoil por año</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>