force-app/main/default/objects/Quote/fields/Mantenimiento_primaservicios__c.field-meta.xml
<CustomField>
    <fullName>Mantenimiento_primaservicios__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mantenimiento</label>
    <type>Checkbox</type>
</CustomField>