force-app/main/default/objects/Quote/fields/margen_actual_anual__c.field-meta.xml
<CustomField>
    <fullName>margen_actual_anual__c</fullName>
    <label>margen actual anual</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>