force-app/main/default/objects/Quote/fields/Margen_anual__c.field-meta.xml
<CustomField>
    <fullName>Margen_anual__c</fullName>
    <description>Lo que se le resta a otros ingresos es el coste real</description>
    <formula>( Margen_por_tonelada__c  *   Consumo_previsto_toneladas_real__c  )+(Otros_ingresos__c-85)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margen anual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>