force-app/main/default/objects/Quote/fields/margen_no_visible__c.field-meta.xml
<CustomField>
    <fullName>margen_no_visible__c</fullName>
    <formula>Precio_de_Venta__c - Importe_descuento__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>margen no visible</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>