force-app/main/default/objects/Quote/fields/Margen_por_tonelada__c.field-meta.xml
<CustomField>
    <fullName>Margen_por_tonelada__c</fullName>
    <formula>Precio_venta_total__c  - Coste_gas__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margen por tonelada</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>