force-app/main/default/objects/Quote/fields/Max_PB_de_tramos__c.field-meta.xml
<CustomField>
    <fullName>Max_PB_de_tramos__c</fullName>
    <label>Max PB de tramos</label>
    <summarizedField>Tramo__c.PBA__c</summarizedField>
    <summaryForeignKey>Tramo__c.Presupuesto__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>