force-app/main/default/objects/Quote/fields/Modalidad__c.field-meta.xml
<CustomField>
    <fullName>Modalidad__c</fullName>
    <label>Modalidad</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hágalo usted mismo</fullName>
            </value>
            <value>
                <fullName>Modular</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>