force-app/main/default/objects/Quote/fields/Modo_de_Pago_Forfait_3_mensualidades__c.field-meta.xml
<CustomField>
    <fullName>Modo_de_Pago_Forfait_3_mensualidades__c</fullName>
    <label>Modo de Pago Forfait (3 mensualidades)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>¿?</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>