force-app/main/default/objects/Quote/fields/N_mero_de_entregas__c.field-meta.xml
<CustomField>
    <fullName>N_mero_de_entregas__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Número de entregas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>