force-app/main/default/objects/Quote/fields/N_tel_fono_m_vil__c.field-meta.xml
<CustomField>
    <fullName>N_tel_fono_m_vil__c</fullName>
    <label>Nº teléfono móvil</label>
    <type>Phone</type>
</CustomField>