force-app/main/default/objects/Quote/fields/Name_ImagenesOferta_maestro__c.field-meta.xml
<CustomField>
    <fullName>Name_ImagenesOferta_maestro__c</fullName>
    <label>Name ImagenesOferta maestro</label>
    <length>30</length>
    <type>Text</type>
</CustomField>