force-app/main/default/objects/Quote/fields/Name_OpcionesOfertaSTD_maestro__c.field-meta.xml
<CustomField>
    <fullName>Name_OpcionesOfertaSTD_maestro__c</fullName>
    <label>Name OpcionesOfertaSTD maestro</label>
    <length>30</length>
    <type>Text</type>
</CustomField>