force-app/main/default/objects/Quote/fields/NIF_CIF__c.field-meta.xml
<CustomField>
    <fullName>NIF_CIF__c</fullName>
    <label>NIF/CIF</label>
    <length>9</length>
    <type>Text</type>
</CustomField>