force-app/main/default/objects/Quote/fields/Nivel_a_distancia_mes__c.field-meta.xml
<CustomField>
    <fullName>Nivel_a_distancia_mes__c</fullName>
    <label>Nivel a distancia (€/mes)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>