force-app/main/default/objects/Quote/fields/Nivel_PB__c.field-meta.xml
<CustomField>
    <fullName>Nivel_PB__c</fullName>
    <label>Nivel PB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>