force-app/main/default/objects/Quote/fields/Nombre_tramo__c.field-meta.xml
<CustomField>
    <fullName>Nombre_tramo__c</fullName>
    <label>Nombre tramo</label>
    <length>100</length>
    <type>Text</type>
</CustomField>