force-app/main/default/objects/Quote/fields/Notas__c.field-meta.xml
<CustomField>
    <fullName>Notas__c</fullName>
    <description>Notas para mostrar en la aplicación</description>
    <label>Notas</label>
    <length>255</length>
    <type>Text</type>
</CustomField>