force-app/main/default/objects/Quote/fields/Num_1__c.field-meta.xml
<CustomField>
    <fullName>Num_1__c</fullName>
    <description>Número de aparatos</description>
    <label>Num.1</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>