force-app/main/default/objects/Quote/fields/Num_2__c.field-meta.xml
<CustomField>
    <fullName>Num_2__c</fullName>
    <label>Num.2</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>