force-app/main/default/objects/Quote/fields/Num_3__c.field-meta.xml
<CustomField>
    <fullName>Num_3__c</fullName>
    <label>Num.3</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>