force-app/main/default/objects/Quote/fields/Numero_de_cuotas__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_cuotas__c</fullName>
    <label>Número de cuotas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>