force-app/main/default/objects/Quote/fields/Objetivo_de_retorno_zona__c.field-meta.xml
<CustomField>
    <fullName>Objetivo_de_retorno_zona__c</fullName>
    <formula>IF(Primaconta__c = false, Objetivo_de_retorno__c, Objetivo_de_retorno__c+0.05)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Objetivo de retorno zona</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>