force-app/main/default/objects/Quote/fields/Obra_civil__c.field-meta.xml
<CustomField>
    <fullName>Obra_civil__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Obra civil</label>
    <type>Checkbox</type>
</CustomField>