force-app/main/default/objects/Quote/fields/Obra_civil_Vallado__c.field-meta.xml
<CustomField>
    <fullName>Obra_civil_Vallado__c</fullName>
    <label>Obra civil - Vallado</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>