force-app/main/default/objects/Quote/fields/Obra_civil_Zanjas__c.field-meta.xml
<CustomField>
    <fullName>Obra_civil_Zanjas__c</fullName>
    <label>Obra civil - Zanjas</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>