force-app/main/default/objects/Quote/fields/Observaciones__c.field-meta.xml
<CustomField>
    <fullName>Observaciones__c</fullName>
    <label>Observaciones</label>
    <length>200</length>
    <type>Text</type>
</CustomField>