force-app/main/default/objects/Quote/fields/Observaciones_comerciales__c.field-meta.xml
<CustomField>
    <fullName>Observaciones_comerciales__c</fullName>
    <label>Observaciones comerciales</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>