force-app/main/default/objects/Quote/fields/Observaciones_gas__c.field-meta.xml
<CustomField>
    <fullName>Observaciones_gas__c</fullName>
    <label>Observaciones gas</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>