force-app/main/default/objects/Quote/fields/Observaciones_precio2__c.field-meta.xml
<CustomField>
    <fullName>Observaciones_precio2__c</fullName>
    <label>Observaciones precio</label>
    <type>TextArea</type>
</CustomField>