force-app/main/default/objects/Quote/fields/Observaciones_Precio__c.field-meta.xml
<CustomField>
    <fullName>Observaciones_Precio__c</fullName>
    <label>Observaciones precio</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>