force-app/main/default/objects/Quote/fields/Opcion_seleccionada_producto__c.field-meta.xml
<CustomField>
    <fullName>Opcion_seleccionada_producto__c</fullName>
    <label>Opción seleccionada producto</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mensual</fullName>
            </value>
            <value>
                <fullName>Fijo</fullName>
            </value>
            <value>
                <fullName>Contador</fullName>
            </value>
            <value>
                <fullName>Plana</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>