force-app/main/default/objects/Quote/fields/Origen__c.field-meta.xml
<CustomField>
    <fullName>Origen__c</fullName>
    <label>Origen</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Llamada oficina</fullName>
            </value>
            <value>
                <fullName>Llamada call center</fullName>
            </value>
            <value>
                <fullName>Correo ordinario</fullName>
            </value>
            <value>
                <fullName>Red social</fullName>
            </value>
            <value>
                <fullName>Ferias y eventos</fullName>
            </value>
            <value>
                <fullName>Info@</fullName>
            </value>
            <value>
                <fullName>Aviso va chofer</fullName>
            </value>
            <value>
                <fullName>Avisio va PS</fullName>
            </value>
            <value>
                <fullName>Prescriptores</fullName>
            </value>
            <value>
                <fullName>Asociación gremio</fullName>
            </value>
            <value>
                <fullName>Regalo doble</fullName>
            </value>
            <value>
                <fullName>EUROS X KW</fullName>
            </value>
            <value>
                <fullName>Campaña márketing</fullName>
            </value>
            <value>
                <fullName>Prospección directa</fullName>
            </value>
            <value>
                <fullName>web</fullName>
            </value>
            <value>
                <fullName>Teleprospección</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>