force-app/main/default/objects/Quote/fields/Origen_tipo_cliente__c.field-meta.xml
<CustomField>
    <fullName>Origen_tipo_cliente__c</fullName>
    <label>Origen tipo cliente</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Nueva creación</fullName>
            </value>
            <value>
                <fullName>Cambio botellas</fullName>
            </value>
            <value>
                <fullName>Cambio depósito REPSOL</fullName>
            </value>
            <value>
                <fullName>Cambio depósito CEPSA</fullName>
            </value>
            <value>
                <fullName>Cambio depósito BP</fullName>
            </value>
            <value>
                <fullName>Cambio depósito VITOGAS</fullName>
            </value>
            <value>
                <fullName>Cambio depósito Otro</fullName>
            </value>
            <value>
                <fullName>Cambio energía Electricidad</fullName>
            </value>
            <value>
                <fullName>Cambio energía Fuel</fullName>
            </value>
            <value>
                <fullName>Cambio energía Gasóleo</fullName>
            </value>
            <value>
                <fullName>Cambio energía Otro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>