force-app/main/default/objects/Quote/fields/Otros_Extras__c.field-meta.xml
<CustomField>
    <fullName>Otros_Extras__c</fullName>
    <label>Otros / Extras</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>