force-app/main/default/objects/Quote/fields/Otros_ingresos__c.field-meta.xml
<CustomField>
    <fullName>Otros_ingresos__c</fullName>
    <label>Otros ingresos</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>