force-app/main/default/objects/Quote/fields/Pago_inicial__c.field-meta.xml
<CustomField>
    <fullName>Pago_inicial__c</fullName>
    <label>Pago inicial</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>