force-app/main/default/objects/Quote/fields/Pago_inicial_inversion__c.field-meta.xml
<CustomField>
    <fullName>Pago_inicial_inversion__c</fullName>
    <label>Pago inicial inversión</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>